--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -104,12 +104,12 @@
 			<version>3.24.0-GA</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-remote-driver</artifactId>
-			<version>2.53.1</version>
-			<scope>test</scope>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.seleniumhq.selenium</groupId>-->
+<!--			<artifactId>selenium-remote-driver</artifactId>-->
+<!--			<version>2.53.1</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
 
 		<!--		<dependency>-->
 <!--			<groupId>net.serenity-bdd</groupId>-->
